--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,13 @@
-# main links
 main:
   - title: "Home"
-    url: "/"
+    url:   "/"
+  - title: "About"
+    url: /about/
   - title: "Resume"
     url: /resume/
   - title: "Projects"
     url: /projects/
-  - title: "About"
-    url: /about/
+  - title: "Publications"
+    url: /publications/
   - title: "Contact"
     url: /contact/
