Updated text in descriptions and profile page (3).

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # site settings
 title: "Alex Fraley"
-subtitle: "Robotic Research Engineer | Robot Test Method Development | AI Simulation"
+subtitle: "Robotic Research Engineer | Robot Test Method Development and Validation | AI Simulation"
 email: "alexmfraley@gmail.com"
 description: "Portfolio website showcasing some of my recent academic and professional work, focused on my contributions to the development of test methods as a robotic researcher."
 baseurl: ""  # Leave blank for GitHub Pages to work with a custom domain
